# schema

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  build.sh  gen_vs2017_project.bat  gen_xcode_project.sh  premake5.lua  run.sh
cmake/: clang-format.cmake  doxygen.cmake
docs/: annotated.html  classschema_1_1_component-members.html  classschema_1_1_component_container-members.html  classschema_1_1_component_container.html  classschema_1_1_e_c_s-members.html  classschema_1_1_e_c_s.html  classschema_1_1_generational_arena-members.html  classschema_1_1_generational_arena.html  component_8h_source.html  component__container_8h_source.html  dir_66f4747048d73516d2e9c94c8abd2898.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  generational__arena_8h_source.html  hierarchy.html  i__component__container_8h_source.html  i__system_8h_source.html  index.html  schema_8h.html  schema_8h_source.html  structschema_1_1_i_component.html  structschema_1_1_i_component_container-members.html
docs/html/: classes.html  classschema_1_1_component.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  fwd_8h_source.html  hierarchy.html  i__component_8h_source.html  i__system_8h_source.html  schema_8h_source.html  structschema_1_1_i_component_container.html  structschema_1_1_i_system-members.html  structschema_1_1_i_system.html
docs/html/search/: all_0.js  all_1.js
docs/search/: all_0.js  all_2.js  all_3.js  classes_2.js  files_0.js  functions_0.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js
include/schema/: component.h  component_container.h  fwd.h  generational_arena.h  i_component.h  i_component_container.h  i_system.h  schema.h
include/schema/util/: TypeCounter.h  type_counter.h
sandbox/: CMakeLists.txt  sandbox.cpp
sandbox/src/: main.cpp
schema/src/: schema.cpp  schema.h
src/: CMakeLists.txt
